# avatar-chat-server

./: .dockerignore  .env.example  .gitignore  CLIENT_IMPLEMENTATION_SPEC.md  Dockerfile  LICENSE  README.md  SPECIFICATION.md  app.json  azuredeploy.json  cloudformation.yaml  deploy-cloudrun.ps1  docker-compose.yml  pyproject.toml  simple_gemini_test.py  test.html  test_client_audio.py  test_client_simulation.py  test_client_transcript.py  test_gemini_transcript.py  test_interruption.py  transcript_log.json
.deploy/azure/: azuredeploy.json
.deploy/gcp/: app.json
.github/workflows/: docker-publish.yml
scripts/: test_client_audio.py  test_client_simulation.py
src/: config.py  main.py
src/agents/: __init__.py  base_agent.py  custom_tools.py  remote_agent.py  sample_gemini_agent.py  sample_openai_agent.py  tools.py
src/agents/gemini/: __init__.py  config.py  gemini_settings.py  sample_agent.py
src/agents/openai/: __init__.py  config.py  openai_settings.py  sample_agent.py
src/agents/openai/realtime_client/: __init__.py  api.py  client.py  conversation.py  event_handler.py  utils.py
src/agents/realtime_client/: __init__.py  client.py
src/audio_to_expression/: __init__.py  inference.py  onnx_inference.py  utils.py
src/audio_to_expression/models/: __init__.py  network.py
src/audio_to_expression/models/encoder/: __init__.py  wav2vec.py
src/auth/: __init__.py  middleware.py  rate_limiter.py  token_manager.py
src/chat/: chat_session.py
src/core/: __init__.py  config.py  custom_settings.py  logger.py  settings.py
src/realtime_client/: api.py  client.py  conversation.py  utils.py
src/routers/: __init__.py  chat.py  chat_router.py
src/services/: __init__.py  agent_service.py  audio2exp_service.py  openai_service.py  wav2arkit_service.py
src/wav2arkit/: __init__.py  a2e.py  core.py  inference.py  utils.py
