[project]
name = "avatar-chat-server"
version = "1.0.0"
description = "Real-time voice-to-avatar interaction server combining OpenAI Realtime API with Audio to Expression model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # FastAPI Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",

    # WebSocket support (for OpenAI Realtime client)
    "websockets>=12.0",

    # Performance - Fast JSON serialization
    "orjson>=3.9.0",

    # Audio processing
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "scipy>=1.10.0",

    # Environment variables
    "python-dotenv>=1.0.0",

    # Audio2Expression model dependencies
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers==4.36.2",
]

[project.optional-dependencies]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# Use PyTorch CUDA 12.4 wheels from the pytorch index
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[tool.hatch.build.targets.wheel]
packages = ["src"]
