[project]
name = "avatar-chat-server"
version = "1.0.0"
description = "Real-time voice-to-avatar interaction server combining OpenAI Realtime API with Wav2Arkit model"
readme = "README.md"
requires-python = "==3.10.*"
license = { text = "MIT" }

dependencies = [
    # FastAPI Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",

    # WebSocket support (for OpenAI Realtime client)
    "websockets>=12.0",

    # Performance - Fast JSON serialization
    "orjson>=3.9.0",

    # Audio processing
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "scipy>=1.10.0",

    # Environment variables
    "python-dotenv>=1.0.0",

    # Wav2Arkit model dependencies (ONNX CPU-only)
    "onnxruntime>=1.23.2",
    # AI Agent dependencies
    "google-genai>=1.0.0",  # Google GenAI SDK for Gemini Live API
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]